# BIG

./: README.txt  contruct_modelo.py  criar_tabela.py  extrair_dados.py  inserir_dados.py  main.py  tratamento_dados.py
Novo/: Dento.ipynb  caixa.csv
SAVA/: API.ipynb  AnPreditiva.ipynb  POST.ipynb  PreparaDados.ipynb  api.py  arquivo_convertido.json  dados.csv  dados.xlsx  db.csv  modelo_vendas.pkl  sava.py
SAVA/.ipynb_checkpoints/: POST-checkpoint.ipynb  PreparaDados-checkpoint.ipynb
SAVA/tratando_dados_com_python/: tratamento_dados.ipynb
outubroVermelho/: pyproject.toml
outubroVermelho/outubrovermelho/: Save.ipynb
outubroVermelho/outubrovermelho/.ipynb_checkpoints/: Save-checkpoint.ipynb
spark/: pyproject.toml
storage/: AgostoAzul.csv  JulhoAmarelo.csv  JunhoRosa.csv  Maio.csv  Setembro_atualizado.csv  itens.csv  sua_planilha_sem_acento.csv
