[tool.poetry]
name = "spark"
version = "0.1.0"
description = ""
authors = ["FILLIPE COSTA XAVIER MONTEIRO <106326971+FillipeCosta@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
